# PoseEstimation

./: .gitignore  README.md  log.md  main.py  pyproject.toml  requirement.txt  requirements.txt
CIFAR-10/src/: config.py  dataset.py  evaluate.py  model.py  predict.py  process.py  train.py
DETR/: README.md
DETR/src/model/: detr.py  transformer.py
DeepPose/src/: model.py
DeepPose/src/.claude/: settings.local.json
HRNet/src/: model.py
ResNet/: model.py
Transformer/: README.md
Transformer/API/: API.ipynb
Transformer/案例/data/processed/: en_vocab.txt  test.jsonl  train.jsonl  zh_vocab.txt
Transformer/案例/logs/2026-04-14_17-08-09/: events.out.tfevents.1776157689.kirito.13644.0
Transformer/案例/src/: config.py  dataset.py  evaluate.py  model.py  predict.py  process.py  tokenizer.py  train.py
VIT/: README.md
VIT/example/src/: config.py  dataset.py  evaluate.py  loss.py  model.py  train.py
VitPose/configs/: ParamConfig.py  __init__.py  config.py
VitPose/models/: __init__.py  loss.py  vitpose.py
VitPose/tool/: train.py
