[project]
name = "poseestimation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.68.3",
]


[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://mirrors.tuna.tsinghua.edu.cn/pytorch/wheels/cu126/"
explicit = true # 这个源除非指定，否则不会来用解析其他包


[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }
