[project]
name = "poseestimation"
version = "0.1.0"
requires-python = ">=3.9, <3.12"
dependencies = [
    "ipykernel>=6.31.0",
    "openmim>=0.3.9",
    "pip<23.0",
    "setuptools==69.5.1",
    "torch==2.1.2",
    "torchinfo>=1.8.0",
    "torchvision==0.16.2",
]


[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

# 配置 PyTorch 专用源（南京大学镜像，对 CUDA 版本支持更好）
[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://mirrors.nju.edu.cn/pytorch/whl/cu118"
explicit = true  # 仅对明确指定的包生效，防止污染普通包解析

# ==========================================
# 2. 为特定包指定源 (Sources)
# ==========================================
[tool.uv.sources]
# 指定 PyTorch 核心三剑客使用南大源
torch = { index = "pytorch-cu118" }
torchvision = { index = "pytorch-cu118" }
torchaudio = { index = "pytorch-cu118" }

